--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ h3 {
 
 .card {
     width: 100%;
+    max-width: 400px;
     padding: 15px;
     background-color: #494949;
     box-shadow: 0 2px 8px rgba(255, 253, 253, 0.15);
@@ -557,7 +558,7 @@ h3 {
     color: white;
 }
 
-.slider-container {
+.trending-slider-container {
     position: relative;
     width: 100%;
     max-width: 600px;
@@ -567,7 +568,7 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.35);
 }
 
-.slider-track {
+.trending-slider-track {
     display: flex;
     transition: transform 0.5s ease-in-out;
 }
@@ -641,7 +642,7 @@ h3 {
     align-items: center;
 }
 
-.slider-wrapper {
+.slider-wrapper, .nft-slider-wrapper {
     overflow: hidden;
     flex: 1;
     display: flex;
@@ -704,23 +705,23 @@ h3 {
     background-color: #ffb700;
 }
 
-.category-list {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    margin: 15px;
-}
+/*.category-list {*/
+/*    display: flex;*/
+/*    gap: 20px;*/
+/*    flex-wrap: wrap;*/
+/*    margin: 15px;*/
+/*}*/
 
-.image-container {
-    position: relative;
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #eaeaea;
-    border-radius: 5px;
-}
+/*.image-container {*/
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    height: 200px;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    background-color: #eaeaea;*/
+/*    border-radius: 5px;*/
+/*}*/
 
 .image-container img {
     display: none;
@@ -756,16 +757,17 @@ h3 {
 
 .pagination-btn {
     padding: 5px 10px;
-    border: 1px solid #ccc;
-    background-color: white;
+    border: none;
+    background-color: #ea680f;
+    color: #fff;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 20px;
     font-size: 14px;
 }
 
 .pagination-btn.active {
-    background-color: #ea680f;
-    color: white;
+    background-color: #ffffff;
+    color: #000;
     border: none;
 
     border-radius: 20px;
@@ -917,29 +919,17 @@ footer {
     margin-bottom: 20px;
 }
 
-.slider-wrapper {
-    overflow-x: scroll;
-    display: flex;
-    gap: 10px;
-    width: 100%;
-    cursor: grab;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-}
-
-.slider-wrapper::-webkit-scrollbar {
-    display: none;
-}
-
-.slider-track {
-    min-width: 150%;
-}
-
 .slider-control {
     background-color: transparent;
     border: none;
     cursor: pointer;
     padding: 0 10px;
+}
+
+.nft-slider-track {
+    display: flex;
+    transition: transform 0.5s ease;
+    will-change: transform;
 }
 
 .slider-control-nft {
@@ -972,6 +962,8 @@ footer {
     width: 10px;
     height: 20px;
 }
+
+
 
 .my-nft-category-item {
     background-color: #f46c07;
