--- a/style.css
+++ b/style.css
@@ -406,6 +406,7 @@ h3 {
     border-top: 1px solid #555;
     border-bottom: 1px solid #555;
     padding: 10px;
+    text-align: center;
 }
 
 .nft-price {
@@ -588,7 +589,7 @@ h3 {
 .buy-nft-button {
     background-color: var(--accent-color);
     color: var(--text-color);
-    padding: 10px 20px;
+    padding: 15px 20px;
     font-size: 1.2em;
     font-weight: bold;
     border-radius: 20px;
@@ -618,9 +619,9 @@ h3 {
 
 /* My NFT */
 .my-nft-card {
-    background-color: #2c2c2c;
+    background-color: #474747;
     padding: 20px;
-    border-radius: 12px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
@@ -634,13 +635,14 @@ h3 {
 .my-nft-image-container {
     width: 100%;
     height: 200px;
+    max-width: 350px;
     overflow: hidden;
     border-radius: 20px;
 }
 
 .my-nft-card-image {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .my-nft-card-title {
@@ -658,6 +660,7 @@ h3 {
 
 .my-nft-info-item {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 5px;
     font-size: 0.9rem;
@@ -679,14 +682,14 @@ h3 {
 
 .my-nft-card-description {
     font-size: 0.9rem;
-    border-top: 1px solid #444;
-    border-bottom: 1px solid #444;
+    border-top: 1px solid #6a6969;
+    border-bottom: 1px solid #6a6969;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .my-nft-card-price {
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: bold;
     text-align: center;
     color: var(--text-color);
@@ -752,7 +755,7 @@ h3 {
     }
 
     .buy-nft-button {
-        padding: 8px 16px;
+        padding: 14px 16px;
         font-size: 14px;
     }
 
