--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --accent-hover-color: #ffb700;
 
     --text-color: #fff;
-    --card-bg-color: #494949;
+    --card-bg-color: #464646;
     --card-shadow-color: rgba(255, 253, 253, 0.15);
 
     --shadow-color: rgba(0, 0, 0, 0.1);
@@ -44,7 +44,7 @@ h3 {
 
 .scroll-to-top {
     position: fixed;
-    bottom: 90px;
+    bottom: 110px;
     right: 20px;
     background-color: var(--accent-color);
     color: var(--text-color);
@@ -191,7 +191,9 @@ h3 {
     padding: 10px 14px;
 }
 
-.nav-links a:focus {
+.nav-links a:focus,
+.nav-links a:active,
+.nav-links a:focus-visible  {
     background-color: var(--accent-color);
     color: var(--text-color);
     border-radius: 20px;
@@ -339,7 +341,6 @@ h3 {
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    max-width: 400px;
     margin-bottom: 20px;
     border-radius: 20px;
     padding: 20px;
@@ -461,13 +462,9 @@ h3 {
 }
 
 .panel-content {
-    background: #333;
+    position: relative;
     padding: 20px;
-    border-radius: 20px;
-    text-align: center;
-    width: 90%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
 }
 
 .panel-content img {
@@ -491,8 +488,8 @@ h3 {
 
 .nft-details-panel .panel-content {
     padding: 15px 20px;
-    max-width: 450px;
-    border-radius: 12px;
+    margin: 0 50px;
+    border-radius: 20px;
     background-color: #333;
 }
 
@@ -589,8 +586,8 @@ h3 {
 .buy-nft-button {
     background-color: var(--accent-color);
     color: var(--text-color);
-    padding: 15px 20px;
-    font-size: 1.2em;
+    padding: 20px;
+    font-size: 1.4em;
     font-weight: bold;
     border-radius: 20px;
     border: none;
@@ -600,15 +597,19 @@ h3 {
 
 .close-panel {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    background: #ff4c4c;
+    top: -10px;
+    right: -10px;
+    background-color: #f44336;
     color: white;
     border: none;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
     border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
 
@@ -627,15 +628,14 @@ h3 {
     flex-direction: column;
     justify-content: space-between;
     gap: 15px;
-    max-width: 400px;
     width: 100%;
     color: #ffffff;
+    margin-bottom: 20px;
 }
 
 .my-nft-image-container {
     width: 100%;
     height: 200px;
-    max-width: 350px;
     overflow: hidden;
     border-radius: 20px;
 }
@@ -653,20 +653,26 @@ h3 {
 
 .my-nft-info-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    padding: 0 0 5px 0;
+
 }
 
 .my-nft-info-item {
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 5px;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    border-right: 1px solid #5a5a5a;
-    padding-right: 20px;
+    justify-content: center;
+    gap: 8px;
+    color: var(--text-color);
+    font-size: 16px;
+    padding-right: 15px;
+    margin: 0 10px;
+    border-right: 1px solid #ffffff30;
+}
+
+.my-nft-info-item img, .my-nft-info-item span {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .nft-price-row {
@@ -689,7 +695,7 @@ h3 {
 }
 
 .my-nft-card-price {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
     color: var(--text-color);
@@ -755,8 +761,8 @@ h3 {
     }
 
     .buy-nft-button {
-        padding: 14px 16px;
-        font-size: 14px;
+        padding: 14px 14px;
+        font-size: 18px;
     }
 
     .close-panel {
@@ -800,69 +806,83 @@ h3 {
     margin-top: 2rem;
 }
 
-.trending-table th, .trending-table td {
-    text-align: left;
-    padding: 0.75rem;
-    border-bottom: 1px solid var(--text-color);
-}
-
-.trending-table th {
-    background-color: var(--accent-hover-color);
-    color: var(--text-color);
+.trending-slider {
+    display: flex;
+    overflow-x: auto;
 }
 
 .trending-slider-container {
-    position: relative;
-    width: 100%;
-    max-width: 600px;
-    margin: 1rem auto;
+    padding: 10px;
     overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.35);
-    background-color: var(--card-bg-color);
+    background-color: #333333;
+    border-radius: 20px;
 }
 
 .trending-slider-track {
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.3s ease;
+    border-radius: 20px;
+
+}
+
+.trending-nft-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-bottom: 2px solid #f97316;
+}
+
+.trending-nft-title {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 8px;
+}
+.trending-info-row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.trending-info-item {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    white-space: nowrap;
 }
 
 .slider-item {
     flex: 0 0 100%;
-    max-width: 100%;
+    width: 100%;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
+    border-radius: 20px;
+
 }
 
 .slider-card {
-    position: relative;
     width: 100%;
-    height: auto;
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
+    background-color: var(--card-bg-color);
+    box-shadow: 0 4px 8px rgb(72, 72, 72);
+    display: flex;
+    flex-direction: column;
+}
+
+.slider-card-overlay {
+    padding: 10px;
+    background-color: #333333;
+    color: white;
+    position: relative;
+    border-radius: 20px;
+
 }
 
 .slider-card h3{
     text-transform: capitalize;
-}
-
-.slider-card img {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.slider-card-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    color: var(--text-color);
-    padding: 10px;
-    text-align: left;
-    z-index: 10;
 }
 
 
@@ -1066,7 +1086,7 @@ footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 15px 10px 10px 10px;
+        padding: 15px 10px 25px 10px;
         width: 100%;
         background-color: #5a5a5a;
         border-top: 3px solid #ee701a;
