--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     padding-bottom: 100px;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 h3 {
     color: var(--text-color);
 }
@@ -588,7 +592,7 @@ h3 {
 .buy-nft-button {
     background-color: var(--accent-color);
     color: var(--text-color);
-    padding: 20px;
+    padding: 40px 20px 20px 20px;
     font-size: 1.4em;
     font-weight: bold;
     border-radius: 20px;
