--- a/style.css
+++ b/style.css
@@ -72,11 +72,12 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 20px 40px 20px;
     background-color: var(--secondary-bg-color);
     border-top: 2px solid var(--accent-color);
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 
+    flex-wrap: nowrap; /* Запрещаем перенос элементов */
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     z-index: 1000;
@@ -87,18 +88,22 @@ h3 {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     color: var(--text-color);
+    flex-wrap: nowrap; /* Запрещаем перенос элементов */
 }
 
 .wallet-column {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    flex-wrap: nowrap; /* Запрещаем перенос элементов */
 }
 
 .refresh-button {
     background-color: transparent;
     border: none;
     cursor: pointer;
+
+    flex-wrap: nowrap; /* Запрещаем перенос элементов */
 }
 
 .refresh-button:disabled {
@@ -822,10 +827,6 @@ h3 {
         font-size: 1rem;
     }
 
-    .buy-nft-button {
-        padding: 14px 14px;
-        font-size: 18px;
-    }
 
     .close-panel {
         font-size: 16px;
@@ -847,11 +848,6 @@ h3 {
     .panel-content p {
         font-size: 1em;
         text-transform: capitalize;
-    }
-
-    .buy-nft-button {
-        padding: 6px 12px;
-        font-size: 16px;
     }
 
     .close-panel {
